# GCS

./: CMakeLists.txt  setup_git.txt
client/: CMakeLists.txt  client_priv.h  mysql.cc  mysql_upgrade.c  mysqlbinlog.cc  mysqlbinlogex.cc  mysqlcheck.c  mysqldump.c  tmysqlbinlogex.cc  tmysqlbinlogex.h  tmysqldump.cc  tmysqlparse.cc
cmake/: mysql_version.cmake
cmake/build_configurations/: mysql_release_O0.cmake  mysql_release_nodebug.cmake
include/: hash.h  m_string.h  my_base.h  my_global.h  my_pthread.h  my_sys.h  mysql.h  mysql_com.h  mysql_version.h.in  url.h
include/mysql/: plugin.h  plugin_audit.h.pp  plugin_auth.h.pp  plugin_ftparser.h.pp
include/mysql/psi/: mysql_thread.h
libmysql/: CMakeLists.txt  libdbdog.cc  libdbdog.h
libmysqld/: CMakeLists.txt  lib_sql.cc
mysql-test/: CMakeLists.txt  mysql-test-run.pl  test_mysql_suite.pl
mysql-test/include/: show_binlog_events2.inc
mysql-test/r/: 1st.result  connect.result  create.result  flush2.result  grant_old_password.result  information_schema-big.result  information_schema.result  information_schema_db.result  log_tables.result  log_tables_upgrade.result  mysql_upgrade.result  mysql_upgrade_ssl.result  mysqlcheck.result  mysqlcheck4tmysql.result  mysqld--help-notwin.result  mysqld--help-win.result  mysqldump.result  mysqlshow.result  partition_innodb.result  partition_innodb_plugin.result  partition_mgm_err.result  plugin_auth.result  show_check.result  system_mysql_db.result
mysql-test/std_data/: upgrade_1.frm  upgrade_2.frm
mysql-test/t/: grant_old_password.test  information_schema.test  mysqlcheck4tmysql.test  mysqldump.test  partition_mgm_err.test
mysys/: CMakeLists.txt  array.c  hash.c  mf_iocache.c  mf_iocache2.c  my_pthread.c  my_wincond.c  string.c  url.c
plugin/semisync/: semisync_master.cc
scripts/: fill_help_tables.sql  mysql_system_tables.sql  mysqld_safe.sh
sql/: CMakeLists.txt  derror.cc  field.cc  field.h  ha_partition.cc  ha_partition.h  handler.cc  handler.h  item.cc  item.h  item_cmpfunc.h  item_create.cc  item_func.h  item_strfunc.cc  item_strfunc.h  item_sum.cc  item_sum.h  item_timefunc.cc  item_timefunc.h  lex.h  log.cc  log.h  log_event.cc  log_event.h  message.aps  mysqld.cc  mysqld.h  opt_range.cc  opt_sum.cc  query_response_time.cc  query_response_time.h  set_var.cc  set_var.h  slave.cc  slave.h  sp_head.cc  sp_head.h  sql_acl.cc  sql_admin.cc  sql_base.cc  (+34 more)
sql-common/: client.c
sql/share/: errmsg-utf8.txt
sqlparse/: CMakeLists.txt  message_queue.cc  message_queue.h  mysql_event.h  sqlparse.cc  sqlparse.h  test_ps.c  test_ps.cc
storage/csv/: ha_tina.cc  ha_tina.h
storage/heap/: ha_heap.cc  ha_heap.h
storage/innobase/btr/: btr0btr.c
storage/innobase/buf/: buf0buf.c  buf0rea.c
storage/innobase/data/: data0type.c
storage/innobase/dict/: dict0crea.c  dict0load.c  dict0mem.c
storage/innobase/fil/: fil0fil.c
storage/innobase/handler/: ha_innodb.cc  ha_innodb.h  handler0alter.cc  i_s.cc  i_s.h
storage/innobase/ibuf/: ibuf0ibuf.c
storage/myisam/: ha_myisam.cc  ha_myisam.h
storage/myisammrg/: ha_myisammrg.cc  ha_myisammrg.h
storage/spider/: CMakeLists.txt  ha_spider.cc  ha_spider.h  spd_conn.cc  spd_conn.h  spd_copy_tables.cc  spd_db_conn.cc  spd_db_conn.h  spd_db_handlersocket.cc  spd_db_handlersocket.h  spd_db_include.h  spd_db_mysql.cc  spd_db_mysql.h  spd_db_oracle.cc  spd_db_oracle.h  spd_direct_sql.cc  spd_err.h  spd_i_s.cc  spd_include.h  spd_param.cc  spd_param.h  spd_table.cc  spd_table.h  spd_trx.cc
strings/: ctype-simple.c  str2int.c
tests/: mysql_client_test.c
tools/: tmysqlbinlogex.sh
(+75 files in other folders)
